--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,5 +19,8 @@ jobs:
       - name: Executar testes
         run: npm test
 
+      - name: Build da imagem Docker
+        run: docker build -t novadeploy -f src/docker/Dockerfile .
+
       - name: Simular deploy
         run: echo "Deploy realizado com sucesso!"
