--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,5 +22,14 @@ jobs:
       - name: Build da imagem Docker
         run: docker build -t novadeploy -f src/docker/Dockerfile .
 
-      - name: Simular deploy
-        run: echo "Deploy realizado com sucesso!"
+      - name: Login no Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Tag da imagem
+        run: docker tag novadeploy ${{ secrets.DOCKER_USERNAME }}/novadeploy:latest
+
+      - name: Push da imagem
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/novadeploy:latest
+
+      - name: Finalizar deploy
+        run: echo "Imagem enviada para o Docker Hub com sucesso!"
