--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -1,6 +1,14 @@
 FROM node:18
+
 WORKDIR /app
+
 COPY package*.json ./
 RUN npm install
+
 COPY . .
-CMD ["npm", "test"]
+
+WORKDIR /app/src/site-novadeploy
+
+EXPOSE 3000
+
+CMD ["npm", "start"]
